pyfll (2014.02.23) UNRELEASED; urgency=medium

  * whiteroom lxde switched to lightdm 

 -- Alf Gaida <agaida@siduction.org>  Wed, 22 Jan 2014 20:21:37 +0100

pyfll (2014.01.17) unstable; urgency=medium

  * copyright 

 -- Alf Gaida <agaida@siduction.org>  Fri, 17 Jan 2014 18:56:59 +0100

pyfll (2014.01.16) unstable; urgency=medium

  * siduction-settings-lighdm-kde  in kde/next
  * siduction-settings-lightdm-gtk in xorg/next

 -- Alf Gaida <agaida@siduction.org>  Thu, 16 Jan 2014 02:21:01 +0100

pyfll (2014.01.14) unstable; urgency=medium

  * cleanup 200-siduction-cli
    - siduction-bootstrap removed - not needed
    - fll-installer remove - is a dependency of cli-installer and
      sidu-installer

 -- Alf Gaida <agaida@siduction.org>  Tue, 14 Jan 2014 23:15:35 +0100

pyfll (2014.01.10) unstable; urgency=medium

  * delete some unused lines in 999-finalize.postinst
  * leave the 000-essentials.postinst as is, as it don't collide 
    with systemd updates 
  * remove the pinning for sysvinit

 -- Alf Gaida <agaida@siduction.org>  Wed, 01 Jan 2014 21:32:18 +0100

pyfll (2013.12.30) unstable; urgency=medium

  * 999-postinst: remove the hold for systemd-sysvrc
  * pin sysvinit to -1 - thanks, hsp 

 -- Alf Gaida <agaida@siduction.org>  Sun, 29 Dec 2013 16:39:44 +0100

pyfll (2013.12.29) unstable; urgency=medium

  * kde: added missed vlc

 -- Alf Gaida <agaida@siduction.org>  Sun, 29 Dec 2013 01:19:01 +0100

pyfll (2013.12.27) unstable; urgency=medium

  * add system group systemd-journal 
  * create /var/log/journal
  * set owner and group to systemd-journal 
  * removed the mythes-* packages as they introduce a dependency to
    libreoffice-core|openoffice 

 -- Alf Gaida <agaida@siduction.org>  Sun, 29 Dec 2013 01:18:57 +0100

pyfll (2013.12.26) unstable; urgency=medium

  * hardwired language-packages in pyfll
  * kde lang integration 
  * finally solved the language problems for this release 
  * setserial disabled - nice to have, but not needed for now 
