@@ -31,7 +31,7 @@ packages = """
     siduction-art-wallpaper-@CODENAME_SAFE@
     siduction-live-settings-lxde-@CODENAME_SAFE@
     siduction-settings-lxde-@CODENAME_SAFE@
-    siduction-settings-slim-@CODENAME_SAFE@
+    siduction-settings-lightdm-gtk-@CODENAME_SAFE@
 """
 
 # deps = """
